Code review edits as on Aug 18